implement real ApexiSwap trading
